# cex

./: Cargo.toml  README.md  docker-compose.yml
cashmap/: Cargo.toml
client/: package-lock.json  package.json
client/src/: types.ts
client/src/app/: globals.css  page.tsx
client/src/components/: BottomTabs.tsx  Chart.tsx  Header.tsx  MarketInfoBar.tsx  OrderBookTrades.tsx  OrderEntry.tsx
db-processor/: Cargo.toml
db-processor/migrations/: 20250130090404_init.sql  20250216095516_create_sol_prices_table.up.sql  20250216104916_create_btc_prices_table.down.sql  20250216104916_create_btc_prices_table.up.sql  20250216104921_create_eth_prices_table.up.sql
db-processor/src/: main.rs
db-processor/src/db/: connection.rs  queries.rs
db-processor/src/models/: message_from_engine.rs  messages.rs  mod.rs
db-processor/src/services/: redis_manager.rs
engine/: Cargo.toml
engine/src/: engine.rs  main.rs  messages.rs  models.rs  orderbook.rs  user.rs
engine/src/models/: messages.rs
engine/src/trade/: engine.rs  mod.rs  orderbook.rs  user.rs
engine/src/utils/: redis_manager.rs
http-server/: Cargo.toml  diesel.toml
http-server/src/: main.rs  state.rs
http-server/src/lib/: redis_manager.rs
http-server/src/models/: message_from_engine.rs  message_to_engine.rs  messages.rs  mod.rs  order.rs  ticker.rs
http-server/src/routes/: depth.rs  kline.rs  mod.rs  order.rs  ticker.rs  user.rs
http-server/src/utils/: redis_manager.rs
klines-processor/migrations/: 20250216095516_create_sol_prices_table.up.sql
klines-processor/src/: main.rs
klines-processor/src/models/: message_from_engine.rs  mod.rs
market-maker/: Cargo.toml
market-maker/src/: constants.rs  main.rs
market-maker/src/models/: mod.rs
orderbook-manager/: Cargo.toml  Dockerfile  README.md
orderbook-manager/src/: constants.rs  main.rs
orderbook-manager/src/models/: incoming_message.rs  message_from_api.rs  message_to_api.rs  messages.rs  mod.rs  order.rs  user.rs
orderbook-manager/src/services/: mod.rs  pnl_service.rs  price_service.rs  redis_manager.rs
orderbook-manager/src/tests/: margin_orderbook_tests.rs  mod.rs  orderbook_tests.rs  spot_orderbook_tests.rs
orderbook-manager/src/trade/: engine.rs  margin_orderbook.rs  mod.rs  orderbook.rs  spot_orderbook.rs
orderbook-manager/src/trade/tests/: cancel_order_tests.rs  create_order_tests.rs  depth_tests.rs  mod.rs  open_orders_tests.rs  quote_tests.rs
orderbook-manager/src/utils/: redis_manager.rs
wallet-manager/: .env.example  Cargo.toml
wallet-manager/migrations/: 20250211042107_create_user_accounts.down.sql  20250211042107_create_user_accounts.up.sql  20250212012847_create_users_table.up.sql
wallet-manager/src/: constants.rs  main.rs
wallet-manager/src/db/: db_connection.rs  db_queries.rs  mod.rs
wallet-manager/src/models/: mod.rs
wallet-manager/src/services/: account_monitor.rs  mod.rs  redis_manager.rs  wallet_service.rs
websocket-server/: Cargo.toml  Dockerfile  README.md
websocket-server/src/: redis_manager.rs
ws-server/: Cargo.toml
ws-server/src/: main.rs  messages.rs  state.rs  subscriptions.rs  user.rs
wss-server/: Cargo.toml
wss-server/src/: main.rs  models.rs  redis_manager.rs  user_manager.rs
