[workspace]
members = ["http-server", "orderbook-manager", "wss-server"]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Tarun Kumar"]

[workspace.dependencies]
# HTTP Server dependencies
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"

# Orderbook Manager dependencies
anyhow = "1.0.95"
lazy_static = "1.5.0"
once_cell = "1.20.2"
chrono = "0.4.39"

# WSS Server dependencies
futures-util = "0.3.31"
rand = "0.9.0"
tokio-tungstenite = "0.20.1"

# Common dependencies
log = "0.4.25"
redis = { version = "0.28.2", features = ["async-std-comp"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
