[workspace]
members = ["http-server", "orderbook-manager", "wallet-manager", "websocket-server", "db-processor", "market-maker"]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Tarun Kumar"]

[workspace.dependencies]
# HTTP Server dependencies
axum = "0.8.1"
dotenv = "0.15.0"
env_logger = "0.11.6"

# Orderbook Manager dependencies
anyhow = "1.0.95"
lazy_static = "1.5.0"
once_cell = "1.20.2"
chrono = "0.4.39"

# WSS Server dependencies
futures-util = "0.3.31"
rand = "0.9.0"
tokio-tungstenite = "0.20.1"

# Common dependencies
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
redis = { version = "0.28.2", features = ["async-std-comp"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }

# Wallet Manager dependencies
bigdecimal = "0.4.7"
bip39 = { version = "2.1.0", features = ["rand", "unicode-normalization"] }
bs58 = "0.5.1"
ed25519-hd-key = "0.3.0"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
sodalite = "0.4.0"
solana-sdk = "2.1.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"
