[package]
name = "db-processor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenvy = "0.15.7"
redis = "0.28.2"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
