[package]
name = "db-processor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
dotenv = "0.15.0"
log = "0.4.25"
redis = "0.28.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
