[package]
name = "klines-processor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
dotenv.workspace = true
lazy_static.workspace = true
redis.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "chrono", "time", "rust_decimal"] }
time = "0.3.0"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
