[package]
name = "engine"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
rand = "0.8.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
