[package]
name = "http-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
redis = { version = "0.28.2", features = ["async-std-comp"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
