[package]
name = "http-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
actix-web.workspace = true
dotenv.workspace = true
env_logger.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
