[package]
name = "http-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
dotenv.workspace = true
env_logger.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
