[package]
name = "market-maker"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
rand.workspace = true
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
