[package]
name = "orderbook-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
once_cell = "1.20.2"
redis = "0.28.2"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
uuid = { version = "1.12.1", features = ["v4"] }
