[package]
name = "orderbook-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
redis.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
