[package]
name = "orderbook-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
once_cell.workspace = true
redis.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid.workspace = true
