[package]
name = "wallet-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bigdecimal = "0.4.7"
bip39 = { version = "2.1.0", features = ["rand", "unicode-normalization"] }
bs58 = "0.5.1"
dotenv.workspace = true
ed25519-hd-key = "0.3.0"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static.workspace = true
pbkdf2 = "0.12.2"
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
sodalite = "0.4.0"
solana-sdk = "2.1.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal"] }
tokio = { workspace = true, features = ["full"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
tracing.workspace = true
tracing-subscriber.workspace = true
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"
