[package]
name = "ws-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
env_logger = "0.11.6"
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
