[package]
name = "wss-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
futures-util = "0.3.31"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
