[package]
name = "wss-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
futures-util.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
lazy_static.workspace = true
redis.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
